[package]
name = "terrars-backblaze-b2"
edition = "2021"
version = "0.1.3"
description = "Pre-generated Terrars B2 bindings"
readme = "readme.md"
license = "ISC"
repository = "https://github.com/andrewbaxter/terrars-backblaze-b2"

[dependencies]
serde = "1.0.151"
serde_json = "1.0.91"
terrars = "0.1.0"

[features]
application_key = []
bucket = []
bucket_file_version = []
data_account_info = []
data_application_key = []
data_bucket = []
data_bucket_file = []
data_bucket_file_signed_url = []
data_bucket_files = []
